deploy/overlays/gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mom
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
